--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="page-header">
       <div class="container">
       По всем вопросам обращайтесь:<br><a href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+      <br>Мой второй сайт: <a href="https://kotmusykant.github.io/my-site/">kotmusykant.github.io/my-site/</a>
     </div>
     </header>
 
