меняет немного стилистики

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="page-header">
       <div class="container">
       По всем вопросам обращайтесь:<br><a href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
-      <br>Мой второй сайт: <a href="https://kotmusykant.github.io/my-site/">kotmusykant.github.io/my-site/</a>
+      <br>Мой второй сайт:<br><a href="https://kotmusykant.github.io/my-site/">kotmusykant.github.io/my-site/</a>
     </div>
     </header>
 
@@ -26,7 +26,7 @@
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
-      <p>Я - кот.(<i>"Краткость - сестра таланта";)</i>)</p>
+      <p>Я - кот.<i>("Краткость - сестра таланта";))</i></p>
       <h3>Чем могу быть полезен</h3>
       <p>На этот раз отметём в сторону принципы и раскроем всю правду. <br>В реальной жизни я музыкант и программист одновременно. Так что, если вдруг вам пригодится образованный музыкант и пока еще не до конца образованный программист, конечно же не продаётся, к сожалению, но временно вы можете его арендовать;)</p>
       <p>Но важное замечание: <strong>Работаю только дистанционно!</strong><br>Но если я вам слишком сильно пригожусь, вот вам <a href="https://kotmusykant.github.io/my-site/">ссылка</a> на мой второй сайт, где всё-таки указан мой адрес эл. почты. Переходите туда, если шо, и пишите мне на почту.
