--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-      По всем вопросам обращайтесь:<br><a href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+      <a class="header-email" href="mailto:ekaterinamal257@gmail.com">ekaterinamal257@gmail.com</a>
       <br>Мой второй сайт:<br><a href="https://kotmusykant.github.io/my-site/">kotmusykant.github.io/my-site/</a>
     </div>
     </header>
@@ -24,6 +24,9 @@
 
     <section class="intro">
       <div class="container">
+      <figure class="user-image">
+  <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Kота">
+      </figure>
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
       <p>Я - кот.<i>("Краткость - сестра таланта";))</i></p>
@@ -37,17 +40,22 @@
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
 
+      <figure class="project-image">
+  <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
+      <a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
     </div>
     </section>
 
     <footer class="page-footer">
       <div class="container">
-      <a href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+      <a href="mailto:ekaterinamal257@gmail.com">ekaterinamal257@gmail.com</a>
     </div>
     </footer>
   </body>
