меняет тему и добавляет навыки

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style (2).css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     <title>Портфолио Junior верстальщика</title>
   </head>
@@ -11,6 +11,7 @@
     <header class="page-header">
       <div class="container">
       <a class="header-email" href="mailto:ekaterinamal257@gmail.com">ekaterinamal257@gmail.com</a>
+      <a class="header-phone" href="tel:+79876543210">+7 987 654 32 10</a>
       <br>Мой второй сайт:<br><a href="https://kotmusykant.github.io/my-site/">kotmusykant.github.io/my-site/</a>
     </div>
     </header>
@@ -33,6 +34,15 @@
       <h3>Чем могу быть полезен</h3>
       <p>На этот раз отметём в сторону принципы и раскроем всю правду. <br>В реальной жизни я музыкант и программист одновременно. Так что, если вдруг вам пригодится образованный музыкант и пока еще не до конца образованный программист, конечно же не продаётся, к сожалению, но временно вы можете его арендовать;)</p>
       <p>Но важное замечание: <strong>Работаю только дистанционно!</strong><br>Но если я вам слишком сильно пригожусь, вот вам <a href="https://kotmusykant.github.io/my-site/">ссылка</a> на мой второй сайт, где всё-таки указан мой адрес эл. почты. Переходите туда, если шо, и пишите мне на почту.
+        <div class="skills">
+          <h3>Мои навыки</h3>
+            <dl class="skills-list">
+              <dt class="skill-html">HTML</dt>
+              <dd class="level"><div style="width: 60%;">60%</div></dd>
+              <dt class="skill-css">CSS</dt>
+              <dd class="level"><div style="width: 40%;">40%</div></dd>
+            </dl>
+          </div>
       </div>
     </section>
 
